# SimpleChat

./: CMakeLists.txt  client.c  client.h  main.c  main.h  readme.md  server.c  server.h  util.c  util.h
